--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(excise VERSION 0.1 LANGUAGES CXX)
+
+project(tiaoshi VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,63 +21,57 @@ set(PROJECT_SOURCES
         mainwindow.ui
 )
 
-
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(excise
+    qt_add_executable(tiaoshi
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        sonwindow.h sonwindow.cpp
-        photo.qrc
-
-        click.h click.cpp
-
-
+        basescene.h basescene.cpp
+        teach.h teach.cpp teach.ui
+        source.qrc
+        adjust.h adjust.cpp adjust.ui
         choosemusic.h choosemusic.cpp
-
         musicchoose.h musicchoose.cpp
         game.h game.cpp
-
-        basescene.h basescene.cpp
-
-        teach.h teach.cpp teach.ui
-
-
-        adjust1.h adjust1.cpp adjust1.ui
-
+        sonwindow.h sonwindow.cpp
+        down.h down.cpp
+        evaluate.h evaluate.cpp
+        score.h score.cpp
+        timer.h timer.cpp
+        gameover.h gameover.cpp gameover.ui
 
 
 
 
 
     )
-target_link_libraries(excise PRIVATE Qt6::Multimedia)
+target_link_libraries(tiaoshi PRIVATE Qt6::Multimedia)
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET excise APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET tiaoshi APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(excise SHARED
+        add_library(tiaoshi SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(excise
+        add_executable(tiaoshi
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(excise PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(tiaoshi PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.excise)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.tiaoshi)
 endif()
-set_target_properties(excise PROPERTIES
+set_target_properties(tiaoshi PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -85,12 +80,12 @@ set_target_properties(excise PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS excise
+install(TARGETS tiaoshi
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(excise)
+    qt_finalize_executable(tiaoshi)
 endif()
