--- a/tiaoshi/CMakeLists.txt
+++ b/tiaoshi/CMakeLists.txt
@@ -35,6 +35,11 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         sonwindow.h sonwindow.cpp
         down.h down.cpp
         evaluate.h evaluate.cpp
+        score.h score.cpp
+        timer.h timer.cpp
+        gameover.h gameover.cpp gameover.ui
+
+
 
 
 
